# issi_proj

./: .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
.github/workflows/: pre-commit.yml
api/: app.py  model.py
config/: .env.prod  .ml-env
data/: .gitignore  job_model.keras.dvc  metadata.json.dvc  pre_processed_data.parquet.dvc  pre_processed_data_2.csv  programming_skills.json  role_counts.csv  role_label_encoder.pkl.dvc
doc/: swagger.yaml
frontend/my-app/: index.html  package-lock.json  package.json
frontend/my-app/src/: App.css  App.jsx
frontend/my-app/src/components/: MatchResults.jsx  PathSelection.jsx  SkillsSelect.jsx
ml/: encode_labels.py  pre_processing.py  predictor.py  settings.py  training.py
src/: app.py  pre_processing.py  predictor.py
src/config/: .ml-env
src/data/: .gitignore  job_model.keras.dvc  metadata.json.dvc  pre_processed_data.parquet.dvc  raw_data.parquet.dvc
src/frontend/: package-lock.json  package.json
src/frontend/src/: App.css  App.jsx
src/frontend/src/components/: MatchResults.jsx
src/ml/: pre_processing.py  predictor.py
test/: test_app.http
