[project]
name = "issi-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.59.1",
    "dvc-s3>=3.2.0",
    "polars>=1.27.1",
    "pre-commit>=4.2.0",
    "sentence-transformers==3.4.1",
    "tensorflow==2.18.0",
    "tf-keras>=2.18.0",
]
